--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,28 +3,21 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant-path-matcher
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
   application:
     name: teste-api
   servlet:
     multipart:
       max-file-size: 50MB
   datasource:
-    name: teste_db
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:./data/teste
-    username: sa
-    password: 
+    url: jdbc:mysql://localhost:3306/lampp-it
+    username: user
+    password: password
+
   jpa:
     show-sql: true
-  sql:
-    init:
-      platform: org.hibernate.dialect.H2Dialect
-      mode: always
 server:
   port: 8080
+  error:
+    include-stacktrace: never
 
 allowedHosts: http://localhost:4200,*
